<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/version_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            tools:text="Version 1.0" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/copyright_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/version_textView"
            android:layout_alignStart="@+id/version_textView"
            android:layout_below="@+id/line"
            android:layout_marginTop="10dp"
            android:text="@string/about_copyright" />

        <TextView
            android:id="@+id/website_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/copyright_textView"
            android:layout_alignStart="@+id/copyright_textView"
            android:layout_below="@+id/copyright_textView"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:text="@string/about_website" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/website_textView"
            android:layout_alignStart="@+id/website_textView"
            android:layout_below="@+id/website_textView"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/about_email" />

        <TextView
            android:id="@+id/disclaimer_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/credits_textView"
            android:layout_alignStart="@+id/credits_textView"
            android:layout_below="@+id/credits_textView"
            android:layout_marginTop="10dp"
            android:text="@string/disclaimer_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/disclaimer_title_textView"
            android:layout_alignStart="@+id/disclaimer_title_textView"
            android:layout_below="@+id/disclaimer_title_textView"
            android:text="@string/disclaimer_text" />

        <TextView
            android:id="@+id/license_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email_textView"
            android:layout_alignStart="@+id/email_textView"
            android:layout_below="@+id/email_textView"
            android:layout_marginTop="10dp"
            android:text="@string/about_license_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/license_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/license_title_textView"
            android:layout_alignStart="@+id/license_title_textView"
            android:layout_below="@+id/license_title_textView"
            android:autoLink="web"
            android:text="@string/about_license" />

        <TextView
            android:id="@+id/credits_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/license_textView"
            android:layout_alignStart="@+id/license_textView"
            android:layout_below="@+id/license_textView"
            android:layout_marginTop="10dp"
            android:text="@string/about_credits_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/credits_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/credits_title_textView"
            android:layout_alignStart="@+id/credits_title_textView"
            android:layout_below="@+id/credits_title_textView"
            android:autoLink="web"
            android:text="@string/about_credits" />

    </RelativeLayout>
</ScrollView>
