<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.kalodiodev.customersnote.addeditcustomer.AddEditCustomerFragment"
    tools:showIn="@layout/activity_add_edit">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/customer_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/addedit_first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addedit_first_name"
            app:layout_constraintVertical_bias="0.666"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <EditText
            android:id="@+id/addedit_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/addedit_first_name"
            android:inputType="text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/customer_imageView"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
            android:id="@+id/addedit_profession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/addedit_profession"
            android:inputType="text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedit_last_name"
            app:layout_constraintLeft_toRightOf="@+id/customer_imageView"/>

        <EditText
            android:id="@+id/addedit_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/addedit_notes"
            android:inputType="textMultiLine"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedit_phone_number"
            app:layout_constraintLeft_toRightOf="@+id/notes_imageView"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/addedit_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/addedit_phone_number"
            android:inputType="phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedit_company_name"
            app:layout_constraintLeft_toRightOf="@+id/phone_imageView"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
            android:id="@+id/addedit_company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/addedit_company_name"
            android:inputType="textPersonName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedit_profession"
            app:layout_constraintLeft_toRightOf="@+id/business_imageView"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/addedit_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/addedit_last_name"
            android:inputType="textPersonName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedit_first_name"
            app:layout_constraintLeft_toRightOf="@+id/customer_imageView"
            android:layout_marginLeft="8dp"/>

        <ImageView
            android:id="@+id/business_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/addedit_company_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addedit_company_name"
            app:layout_constraintVertical_bias="0.333"
            app:srcCompat="@drawable/ic_domain_black_24dp" />

        <ImageView
            android:id="@+id/phone_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_phone_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/addedit_phone_number"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/addedit_phone_number"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintVertical_bias="0.333"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageView
            android:id="@+id/notes_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_description_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/addedit_notes"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageView
            android:id="@+id/profession_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_school_black_24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/addedit_profession"
            app:layout_constraintBottom_toBottomOf="@+id/addedit_profession"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
